--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+.camera-container {
+  width: 80%;  /* or any desired width */
+  max-width: 600px;  /* optional: set a maximum width */
+  margin: 0 auto;  /* centers the container */
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
