added some styling in image capture

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   text-align: center;
 }
 .camera-container {
-  width: 80%;  /* or any desired width */
-  max-width: 600px;  /* optional: set a maximum width */
+  width: 100%;  /* or any desired width */
+  /* max-width: 600px;  */
   margin: 0 auto;  /* centers the container */
 }
 .App-logo {
@@ -39,4 +39,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/* overwriting  */
+
+.cNjdVN {
+  height: 80% !important;
 }
