--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,9 @@
 }
 
 .leaflet-container{
-  height: 300px !important;
+  height: 100% !important;
 }
 
 .eIQnng{
-  height: 360px !important;
+  height: 280px !important;
 }
